fix x-overflow problem again

--- a/src/App.css
+++ b/src/App.css
@@ -282,14 +282,14 @@
 
 .Tutorial-section {
   height: 100vh;
-  width: 100%;
+  width: 93.75%;
 
   display: flex;
   flex-direction: row;
   align-content: flex-start;
   justify-content: flex-start;
 
-  padding-left: 12.5vw;
+  padding-left: 6.25vw;
   margin-top: -60vh;
   margin-bottom: 60vh;
 }
@@ -304,14 +304,14 @@
 
 .about-section {
   height: 100vh;
-  width: 100%;
+  width: 93.75%;
 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: center;
 
-  padding-left: 12.5vw;
+  margin-left: 6.25vw;
   margin-top: -64vh;
   margin-bottom: 64vh;
 }
